Fix some spelling mistakes

--- a/CC-BY.template
+++ b/CC-BY.template
@@ -10,4 +10,4 @@ The Software was produced in conjunction with a degree at Royal Holloway, Univer
 a) obeys the conditions of the licence 
 b) attributes the Copyright Holder and source 
 c) does not misrepresent ownership of The Software
-Submission of work that has been plagerised or otherwise misrepresented is treated as Academic Misconduct. Submissions are routinly checked for this. 
+Submission of work that has been plagiarised or otherwise misrepresented is treated as Academic Misconduct. Submissions are routinely checked for this. 
